@@ -1,3 +1,8 @@
+2010-12-14  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mp-h.in: Remove.
+	* configure.in: Remove mp-h.in from AC_OUTPUT invocation.
+
 2010-12-13  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpz/mod.c: Rewrite.
